js/js.translator/testData/incremental/invalidation/removeFile/lib2/l2_0.kt

fun qux0() = foo0()